--- a/index.html
+++ b/index.html
@@ -6,11 +6,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/fa56ed0519.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <button>Welcome</button>
+    <header class="header">
+        <div class="header__line">
+            <div class="header__logo">
+                <a href="#" class="header__logo-link">
+                    <i class="fas fa-utensils"></i> Food</a>
+            </div>
+
+            <div class="header__phone-box">
+                <p class="header__phone">
+                    <i class="fas fa-phone"></i>
+                    Call Now: 123 456 789
+                </p>
+            </div>
+        </div>
+        <nav class="nav">
+            <div class="container nav__container">
+                <div class="nav__burger-box">
+                    <i class="fas fa-hamburger"></i>
+                    <i class="fas fa-times"></i>
+                </div>
+                <ul class="nav__list">
+                    <li class="nav__element">
+                        <a href="#" class="nav__link">Home</a>
+                    </li>
+                    <li class="nav__element">
+                        <a href="#" class="nav__link">About</a></li>
+                    <li class="nav__element">
+                        <a href="#" class="nav__link">Dishes</a>
+                    </li>
+                    <li class="nav__element">
+                        <a href="#" class="nav__link">Chefs</a>
+                    </li>
+                    <li class="nav__element">
+                        <a href="#" class="nav__link">Speciality</a>
+                    </li>
+                    <li class="nav__element">
+                        <a href="#" class="nav__link">Order</a>
+                    </li>
+                </ul>
+                <div class="nav__socials">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-youtube"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-twitter"></i>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <script src="./js/nav.js"></script>
 </body>
 
 </html>
