add header with responsivness and clouds animation under header

--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
                 </div>
             </div>
         </nav>
+        <div class="header__main">
+            <div class="header__content">
+                <h1 class="header__title">
+                    Welcome <span class="header__title--orange">Food</span> Lovers
+                </h1>
+                <p class="header__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus nobis
+                    impedit quisquam officia iure dolor alias, eius sapiente quidem autem.</p>
+                <button class="header__btn">Get Started</button>
+            </div>
+        </div>
+        <div class="header__clouds">
+        </div>
     </header>
     <script src="./js/nav.js"></script>
 </body>
