--- a/index.html
+++ b/index.html
@@ -72,17 +72,20 @@
         </div>
     </header>
     <section class="about">
-        <h2 class="about__title">About Us</h2>
-        <hr class="about__hr">
-        <div class="about__box">
-            <h2 class="about__title">Lets Satisfy Your Hunger With Us</h2>
-            <!-- <p class="about__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem repudiandae incidunt,
-                quisquam ab architecto, explicabo illum nihil placeat porro, provident quae aliquid itaque praesentium
-                repellat ipsa assumenda id. In, quis soluta aspernatur porro temporibus eaque?</p> -->
-            <button class="about__btn">Learn More</button>
-        </div>
-        <!-- <div class="about__img-box">
-            <img src="./src/girl-chef.png" alt="" class="about__img"> -->
+        <h2 class="about__heading"><span class="about__span">About Us</span></h2>
+        <div class="about__container">
+            <div class="about__box">
+                <h2 class="about__title">Lets Satisfy Your Hunger With Us</h2>
+                <p class="about__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem repudiandae
+                    incidunt,
+                    quisquam ab architecto, explicabo illum nihil placeat porro, provident quae aliquid itaque
+                    praesentium
+                    repellat ipsa assumenda id. </p>
+                <button class="about__btn">Learn More</button>
+            </div>
+            <div class="about__img-box">
+                <img src="./src/girl-chef.png" alt="" class="about__img">
+            </div>
         </div>
     </section>
     <script src="./js/nav.js"></script>
