add dishes section with responsivness and sorting system

--- a/index.html
+++ b/index.html
@@ -88,7 +88,25 @@
             </div>
         </div>
     </section>
+    <section class="dishes">
+        <h2 class="dishes__heading"><span class="dishes__span">Popular Dishes</span></h2>
+        <div class="dishes__sort">
+            <ul class="dishes__list">
+                <li class="dishes__element active" data-dish-type="all">All</li>
+                <li class="dishes__element" data-dish-type="sandwich">Sandwich</li>
+                <li class="dishes__element" data-dish-type="cake">Cake</li>
+                <li class="dishes__element" data-dish-type="juice">Juice</li>
+                <li class="dishes__element" data-dish-type="chocolate">Chocolate</li>
+            </ul>
+        </div>
+        <div class="dishes__box">
+        </div>
+    </section>
+    <section class="chefs">
+        <h2 class="chefs__heading"><span class="chefs__span">Expert Chefs</span></h2>
+    </section>
     <script src="./js/nav.js"></script>
+    <script src="./js/dishes.js"></script>
 </body>
 
 </html>
