add chefs section with responsivness

--- a/index.html
+++ b/index.html
@@ -103,7 +103,70 @@
         </div>
     </section>
     <section class="chefs">
-        <h2 class="chefs__heading"><span class="chefs__span">Expert Chefs</span></h2>
+        <div class="chefs__container">
+            <h2 class="chefs__heading"><span class="chefs__span">Expert Chefs</span></h2>
+            <div class="chefs__box">
+                <div class="chefs__chef">
+                    <div class="chefs__info">
+                        <div class="chefs__name-box">
+                            <p class="chefs__name">Jhon Deo</p>
+                            <p class="chefs__position">Head Chef</p>
+                        </div>
+                        <div class="chefs__socials">
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-youtube"></i>
+                            <i class="fab fa-instagram"></i>
+                            <i class="fab fa-twitter"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="chefs__chef">
+                    <div class="chefs__info">
+                        <div class="chefs__name-box">
+                            <p class="chefs__name">Jhon Deo</p>
+                            <p class="chefs__position">Head Chef</p>
+                        </div>
+                        <div class="chefs__socials">
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-youtube"></i>
+                            <i class="fab fa-instagram"></i>
+                            <i class="fab fa-twitter"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="chefs__chef">
+                    <div class="chefs__info">
+                        <div class="chefs__name-box">
+                            <p class="chefs__name">Jhon Deo</p>
+                            <p class="chefs__position">Head Chef</p>
+                        </div>
+                        <div class="chefs__socials">
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-youtube"></i>
+                            <i class="fab fa-instagram"></i>
+                            <i class="fab fa-twitter"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="chefs__chef">
+                    <div class="chefs__info">
+                        <div class="chefs__name-box">
+                            <p class="chefs__name">Jhon Deo</p>
+                            <p class="chefs__position">Head Chef</p>
+                        </div>
+                        <div class="chefs__socials">
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-youtube"></i>
+                            <i class="fab fa-instagram"></i>
+                            <i class="fab fa-twitter"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        </div>
     </section>
     <script src="./js/nav.js"></script>
     <script src="./js/dishes.js"></script>
