add speciality section with responsivness and update responsivness for chefs section

--- a/index.html
+++ b/index.html
@@ -168,6 +168,57 @@
 
         </div>
     </section>
+    <section class="speciality">
+        <h2 class="speciality__heading"><span class="speciality__span">Our Speciality</span></h2>
+        <div class="speciality__box-food">
+            <div class="speciality__food">
+                <p class="speciality__name">Tasty Hamburger</p>
+                <p class="speciality__discount">Upto 25% Discount</p>
+                <button class="speciality__btn">Check Out</button>
+            </div>
+            <div class="speciality__food">
+                <p class="speciality__name">Fresh Brekfast</p>
+                <p class="speciality__discount">Upto 25% Discount</p>
+                <button class="speciality__btn">Check Out</button>
+            </div>
+            <div class="speciality__food">
+                <p class="speciality__name">Veg Sandwich</p>
+                <p class="speciality__discount">Upto 25% Discount</p>
+                <button class="speciality__btn">Check Out</button>
+            </div>
+            <div class="speciality__food">
+                <p class="speciality__name">Delicious Pizza</p>
+                <p class="speciality__discount">Upto 25% Discount</p>
+                <button class="speciality__btn">Check Out</button>
+            </div>
+        </div>
+        <div class="speciality__box-features">
+            <div class="speciality__feature">
+                <i class="fas fa-shipping-fast"></i>
+                <p class="speciality__feature-name">Fast Delivery</p>
+                <p class="speciality__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+                    excepturi.</p>
+            </div>
+            <div class="speciality__feature">
+                <i class="fas fa-tags"></i>
+                <p class="speciality__feature-name">Heavy Discounts</p>
+                <p class="speciality__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+                    excepturi.</p>
+            </div>
+            <div class="speciality__feature">
+                <i class="fas fa-hand-holding-usd"></i>
+                <p class="speciality__feature-name">Money Returns</p>
+                <p class="speciality__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+                    excepturi.</p>
+            </div>
+            <div class="speciality__feature">
+                <i class="fas fa-headset"></i>
+                <p class="speciality__feature-name">24 X 7 Support</p>
+                <p class="speciality__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+                    excepturi.</p>
+            </div>
+        </div>
+    </section>
     <script src="./js/nav.js"></script>
     <script src="./js/dishes.js"></script>
 </body>
