add contact section with responsivness

--- a/index.html
+++ b/index.html
@@ -219,6 +219,33 @@
             </div>
         </div>
     </section>
+    <section class="contact">
+        <div class="contact__container">
+            <h2 class="contact__heading"><span class="contact__span">Order Now</span></h2>
+            <form class="contact__form">
+                <input type="text" placeholder="Full Name" class="contact__input">
+                <input type="text" placeholder="Food Name" class="contact__input">
+                <input type="number" placeholder="Phone Number" class="contact__input">
+                <select class="contact__select">
+                    <option class="contact__option">Food Type</option>
+                    <option class="contact__option">Vege</option>
+                    <option class="contact__option">Non-Vege</option>
+                </select>
+                <textarea placeholder="Full Address" class="contact__textarea"></textarea>
+                <button type="submit" class="contact__btn">Order Now</button>
+            </form>
+        </div>
+    </section>
+    <section class="newsletter">
+        <div class="newsletter__box">
+            <p class="newsletter__title">Newsletter</p>
+            <p class="newsletter__text">Subscribe For Latest Updates</p>
+            <form class="newslatter__form">
+                <input type="email" placeholder="Enter Your Email" class="newslatter__input">
+                <button type="submit" class="newslatter__btn">Subscribe</button>
+            </form>
+        </div>
+    </section>
     <script src="./js/nav.js"></script>
     <script src="./js/dishes.js"></script>
 </body>
