add newsletter section with responsivness

--- a/index.html
+++ b/index.html
@@ -240,12 +240,15 @@
         <div class="newsletter__box">
             <p class="newsletter__title">Newsletter</p>
             <p class="newsletter__text">Subscribe For Latest Updates</p>
-            <form class="newslatter__form">
-                <input type="email" placeholder="Enter Your Email" class="newslatter__input">
-                <button type="submit" class="newslatter__btn">Subscribe</button>
+            <form class="newsletter__form">
+                <input type="email" placeholder="Enter Your Email" class="newsletter__input">
+                <button type="submit" class="newsletter__btn">Subscribe</button>
             </form>
         </div>
     </section>
+    <footer class="footer">
+        <p class="footer__text">Created By <span class="footer__span">Hubert Mężyk</span></p>
+    </footer>
     <script src="./js/nav.js"></script>
     <script src="./js/dishes.js"></script>
 </body>
