--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         </div>
     </section>
     <footer class="footer">
-        <p class="footer__text">Created By <span class="footer__span">Hubert Mężyk</span></p>
+        <p class="footer__text">Created By <span class="footer__span">Hubert Mężyk</span>| All Rights Reserved!</p>
     </footer>
     <script src="./js/nav.js"></script>
     <script src="./js/dishes.js"></script>
