--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Restaurant</title>
     <script src="https://kit.fontawesome.com/fa56ed0519.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
+    <script src="./js/nav.js" defer></script>
+    <script src="./js/dishes.js" defer></script>
+    <script src="./js/animation.js" defer></script>
 </head>
 
 <body>
@@ -249,8 +254,6 @@
     <footer class="footer">
         <p class="footer__text">Created By <span class="footer__span">Hubert Mężyk</span>| All Rights Reserved!</p>
     </footer>
-    <script src="./js/nav.js"></script>
-    <script src="./js/dishes.js"></script>
 </body>
 
 </html>
