add gsap animation to all of sections, add stick menu, add scroll to section

--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
                         <a href="#" class="nav__link">Home</a>
                     </li>
                     <li class="nav__element">
-                        <a href="#" class="nav__link">About</a></li>
+                        <a href="#about" class="nav__link">About</a></li>
                     <li class="nav__element">
-                        <a href="#" class="nav__link">Dishes</a>
+                        <a href="#dishes" class="nav__link">Dishes</a>
                     </li>
                     <li class="nav__element">
-                        <a href="#" class="nav__link">Chefs</a>
+                        <a href="#chefs" class="nav__link">Chefs</a>
                     </li>
                     <li class="nav__element">
-                        <a href="#" class="nav__link">Speciality</a>
+                        <a href="#speciality" class="nav__link">Speciality</a>
                     </li>
                     <li class="nav__element">
-                        <a href="#" class="nav__link">Order</a>
+                        <a href="#order" class="nav__link">Order</a>
                     </li>
                 </ul>
                 <div class="nav__socials">
@@ -76,7 +76,7 @@
         <div class="header__clouds">
         </div>
     </header>
-    <section class="about">
+    <section id="about" class="about">
         <h2 class="about__heading"><span class="about__span">About Us</span></h2>
         <div class="about__container">
             <div class="about__box">
@@ -93,7 +93,7 @@
             </div>
         </div>
     </section>
-    <section class="dishes">
+    <section id="dishes" class="dishes">
         <h2 class="dishes__heading"><span class="dishes__span">Popular Dishes</span></h2>
         <div class="dishes__sort">
             <ul class="dishes__list">
@@ -107,7 +107,7 @@
         <div class="dishes__box">
         </div>
     </section>
-    <section class="chefs">
+    <section id="chefs" class="chefs">
         <div class="chefs__container">
             <h2 class="chefs__heading"><span class="chefs__span">Expert Chefs</span></h2>
             <div class="chefs__box">
@@ -173,7 +173,7 @@
 
         </div>
     </section>
-    <section class="speciality">
+    <section id="speciality" class="speciality">
         <h2 class="speciality__heading"><span class="speciality__span">Our Speciality</span></h2>
         <div class="speciality__box-food">
             <div class="speciality__food">
@@ -224,7 +224,7 @@
             </div>
         </div>
     </section>
-    <section class="contact">
+    <section id="order" class="contact">
         <div class="contact__container">
             <h2 class="contact__heading"><span class="contact__span">Order Now</span></h2>
             <form class="contact__form">
