--- a/index.html
+++ b/index.html
@@ -254,6 +254,9 @@
     <footer class="footer">
         <p class="footer__text">Created By <span class="footer__span">Hubert Mężyk</span>| All Rights Reserved!</p>
     </footer>
+    <script>
+        document.ready
+    </script>
 </body>
 
 </html>
