add preloading animation

--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant</title>
-    <script src="https://kit.fontawesome.com/fa56ed0519.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
+    <script src="./js/loading.js"></script>
+    <script src="./js/animation.js"></script>
+    <script src="https://kit.fontawesome.com/fa56ed0519.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style.css">
     <script src="./js/nav.js" defer></script>
     <script src="./js/dishes.js" defer></script>
-    <script src="./js/animation.js" defer></script>
 </head>
 
 <body>
+    <div class="loading"></div>
     <header class="header">
         <div class="header__line">
             <div class="header__logo">
