--- a/index.html
+++ b/index.html
@@ -5,260 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
-    <script src="./js/loading.js"></script>
-    <script src="./js/animation.js"></script>
-    <script src="https://kit.fontawesome.com/fa56ed0519.js" crossorigin="anonymous"></script>
+    <title>Software</title>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/nav.js" defer></script>
-    <script src="./js/dishes.js" defer></script>
 </head>
 
 <body>
-    <div class="loading"></div>
-    <header class="header">
-        <div class="header__line">
-            <div class="header__logo">
-                <a href="#" class="header__logo-link">
-                    <i class="fas fa-utensils"></i> Food</a>
-            </div>
 
-            <div class="header__phone-box">
-                <p class="header__phone">
-                    <i class="fas fa-phone"></i>
-                    Call Now: 123 456 789
-                </p>
-            </div>
-        </div>
-        <nav class="nav">
-            <div class="container nav__container">
-                <div class="nav__burger-box">
-                    <i class="fas fa-hamburger"></i>
-                    <i class="fas fa-times"></i>
-                </div>
-                <ul class="nav__list">
-                    <li class="nav__element">
-                        <a href="#" class="nav__link">Home</a>
-                    </li>
-                    <li class="nav__element">
-                        <a href="#about" class="nav__link">About</a></li>
-                    <li class="nav__element">
-                        <a href="#dishes" class="nav__link">Dishes</a>
-                    </li>
-                    <li class="nav__element">
-                        <a href="#chefs" class="nav__link">Chefs</a>
-                    </li>
-                    <li class="nav__element">
-                        <a href="#speciality" class="nav__link">Speciality</a>
-                    </li>
-                    <li class="nav__element">
-                        <a href="#order" class="nav__link">Order</a>
-                    </li>
-                </ul>
-                <div class="nav__socials">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-youtube"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-twitter"></i>
-                </div>
-            </div>
-        </nav>
-        <div class="header__main">
-            <div class="header__content">
-                <h1 class="header__title">
-                    Welcome <span class="header__title--orange">Food</span> Lovers
-                </h1>
-                <p class="header__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus nobis
-                    impedit quisquam officia iure dolor alias, eius sapiente quidem autem.</p>
-                <button class="header__btn">Get Started</button>
-            </div>
-        </div>
-        <div class="header__clouds">
-        </div>
-    </header>
-    <section id="about" class="about">
-        <h2 class="about__heading"><span class="about__span">About Us</span></h2>
-        <div class="about__container">
-            <div class="about__box">
-                <h2 class="about__title">Lets Satisfy Your Hunger With Us</h2>
-                <p class="about__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem repudiandae
-                    incidunt,
-                    quisquam ab architecto, explicabo illum nihil placeat porro, provident quae aliquid itaque
-                    praesentium
-                    repellat ipsa assumenda id. </p>
-                <button class="about__btn">Learn More</button>
-            </div>
-            <div class="about__img-box">
-                <img src="./src/girl-chef.png" alt="" class="about__img">
-            </div>
-        </div>
-    </section>
-    <section id="dishes" class="dishes">
-        <h2 class="dishes__heading"><span class="dishes__span">Popular Dishes</span></h2>
-        <div class="dishes__sort">
-            <ul class="dishes__list">
-                <li class="dishes__element active" data-dish-type="all">All</li>
-                <li class="dishes__element" data-dish-type="sandwich">Sandwich</li>
-                <li class="dishes__element" data-dish-type="cake">Cake</li>
-                <li class="dishes__element" data-dish-type="juice">Juice</li>
-                <li class="dishes__element" data-dish-type="chocolate">Chocolate</li>
-            </ul>
-        </div>
-        <div class="dishes__box">
-        </div>
-    </section>
-    <section id="chefs" class="chefs">
-        <div class="chefs__container">
-            <h2 class="chefs__heading"><span class="chefs__span">Expert Chefs</span></h2>
-            <div class="chefs__box">
-                <div class="chefs__chef">
-                    <div class="chefs__info">
-                        <div class="chefs__name-box">
-                            <p class="chefs__name">Jhon Deo</p>
-                            <p class="chefs__position">Head Chef</p>
-                        </div>
-                        <div class="chefs__socials">
-                            <i class="fab fa-facebook-f"></i>
-                            <i class="fab fa-youtube"></i>
-                            <i class="fab fa-instagram"></i>
-                            <i class="fab fa-twitter"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="chefs__chef">
-                    <div class="chefs__info">
-                        <div class="chefs__name-box">
-                            <p class="chefs__name">Jhon Deo</p>
-                            <p class="chefs__position">Head Chef</p>
-                        </div>
-                        <div class="chefs__socials">
-                            <i class="fab fa-facebook-f"></i>
-                            <i class="fab fa-youtube"></i>
-                            <i class="fab fa-instagram"></i>
-                            <i class="fab fa-twitter"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="chefs__chef">
-                    <div class="chefs__info">
-                        <div class="chefs__name-box">
-                            <p class="chefs__name">Jhon Deo</p>
-                            <p class="chefs__position">Head Chef</p>
-                        </div>
-                        <div class="chefs__socials">
-                            <i class="fab fa-facebook-f"></i>
-                            <i class="fab fa-youtube"></i>
-                            <i class="fab fa-instagram"></i>
-                            <i class="fab fa-twitter"></i>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="chefs__chef">
-                    <div class="chefs__info">
-                        <div class="chefs__name-box">
-                            <p class="chefs__name">Jhon Deo</p>
-                            <p class="chefs__position">Head Chef</p>
-                        </div>
-                        <div class="chefs__socials">
-                            <i class="fab fa-facebook-f"></i>
-                            <i class="fab fa-youtube"></i>
-                            <i class="fab fa-instagram"></i>
-                            <i class="fab fa-twitter"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        </div>
-    </section>
-    <section id="speciality" class="speciality">
-        <h2 class="speciality__heading"><span class="speciality__span">Our Speciality</span></h2>
-        <div class="speciality__box-food">
-            <div class="speciality__food">
-                <p class="speciality__name">Tasty Hamburger</p>
-                <p class="speciality__discount">Upto 25% Discount</p>
-                <button class="speciality__btn">Check Out</button>
-            </div>
-            <div class="speciality__food">
-                <p class="speciality__name">Fresh Brekfast</p>
-                <p class="speciality__discount">Upto 25% Discount</p>
-                <button class="speciality__btn">Check Out</button>
-            </div>
-            <div class="speciality__food">
-                <p class="speciality__name">Veg Sandwich</p>
-                <p class="speciality__discount">Upto 25% Discount</p>
-                <button class="speciality__btn">Check Out</button>
-            </div>
-            <div class="speciality__food">
-                <p class="speciality__name">Delicious Pizza</p>
-                <p class="speciality__discount">Upto 25% Discount</p>
-                <button class="speciality__btn">Check Out</button>
-            </div>
-        </div>
-        <div class="speciality__box-features">
-            <div class="speciality__feature">
-                <i class="fas fa-shipping-fast"></i>
-                <p class="speciality__feature-name">Fast Delivery</p>
-                <p class="speciality__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                    excepturi.</p>
-            </div>
-            <div class="speciality__feature">
-                <i class="fas fa-tags"></i>
-                <p class="speciality__feature-name">Heavy Discounts</p>
-                <p class="speciality__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                    excepturi.</p>
-            </div>
-            <div class="speciality__feature">
-                <i class="fas fa-hand-holding-usd"></i>
-                <p class="speciality__feature-name">Money Returns</p>
-                <p class="speciality__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                    excepturi.</p>
-            </div>
-            <div class="speciality__feature">
-                <i class="fas fa-headset"></i>
-                <p class="speciality__feature-name">24 X 7 Support</p>
-                <p class="speciality__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                    excepturi.</p>
-            </div>
-        </div>
-    </section>
-    <section id="order" class="contact">
-        <div class="contact__container">
-            <h2 class="contact__heading"><span class="contact__span">Order Now</span></h2>
-            <form class="contact__form">
-                <input type="text" placeholder="Full Name" class="contact__input">
-                <input type="text" placeholder="Food Name" class="contact__input">
-                <input type="number" placeholder="Phone Number" class="contact__input">
-                <select class="contact__select">
-                    <option class="contact__option">Food Type</option>
-                    <option class="contact__option">Vege</option>
-                    <option class="contact__option">Non-Vege</option>
-                </select>
-                <textarea placeholder="Full Address" class="contact__textarea"></textarea>
-                <button type="submit" class="contact__btn">Order Now</button>
-            </form>
-        </div>
-    </section>
-    <section class="newsletter">
-        <div class="newsletter__box">
-            <p class="newsletter__title">Newsletter</p>
-            <p class="newsletter__text">Subscribe For Latest Updates</p>
-            <form class="newsletter__form">
-                <input type="email" placeholder="Enter Your Email" class="newsletter__input">
-                <button type="submit" class="newsletter__btn">Subscribe</button>
-            </form>
-        </div>
-    </section>
-    <footer class="footer">
-        <p class="footer__text">Created By <span class="footer__span">Hubert Mężyk</span>| All Rights Reserved!</p>
-    </footer>
-    <script>
-        document.ready
-    </script>
 </body>
 
 </html>
