add navigation for mobile

--- a/index.html
+++ b/index.html
@@ -6,11 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Software</title>
+    <script src="https://kit.fontawesome.com/fa56ed0519.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-
+    <div class="blure"></div>
+    <nav class="nav">
+        <div class="nav__logo">SoftCode</div>
+        <div class="nav__burger">
+            <i class="fas fa-bars"></i>
+        </div>
+        <div class="nav__menu">
+            <div class="nav__logo--menu">SoftCode</div>
+            <ul class="nav__list">
+                <li class="nav__element"><a href="#" class="nav__link">Home</a></li>
+                <li class="nav__element"><a href="#" class="nav__link">Case Studies</a></li>
+                <li class="nav__element"><a href="#" class="nav__link">How it works</a></li>
+                <li class="nav__element"><a href="#" class="nav__link">Consultation</a></li>
+                <li class="nav__element"><a href="#" class="nav__link">Testimonials</a></li>
+                <li class="nav__element"><a href="#" class="nav__link">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+    <script src="./js/nav.js"></script>
 </body>
 
 </html>
