add navigation for desktop

--- a/index.html
+++ b/index.html
@@ -13,22 +13,57 @@
 <body>
     <div class="blure"></div>
     <nav class="nav">
-        <div class="nav__logo">SoftCode</div>
-        <div class="nav__burger">
-            <i class="fas fa-bars"></i>
-        </div>
-        <div class="nav__menu">
-            <div class="nav__logo--menu">SoftCode</div>
-            <ul class="nav__list">
-                <li class="nav__element"><a href="#" class="nav__link">Home</a></li>
-                <li class="nav__element"><a href="#" class="nav__link">Case Studies</a></li>
-                <li class="nav__element"><a href="#" class="nav__link">How it works</a></li>
-                <li class="nav__element"><a href="#" class="nav__link">Consultation</a></li>
-                <li class="nav__element"><a href="#" class="nav__link">Testimonials</a></li>
-                <li class="nav__element"><a href="#" class="nav__link">Contact</a></li>
-            </ul>
+        <div class="nav__container">
+            <div class="nav__line">
+                <div class="nav__addresses">
+                    <div class="nav__address">
+                        <p class="nav__address-text"><i class="fas fa-envelope"></i> example@company.com</p>
+                    </div>
+                    <div class="nav__address">
+                        <p class="nav__address-text"><i class="fas fa-envelope"></i> example@company.com</p>
+                    </div>
+                    <div class="nav__address">
+                        <p class="nav__address-text"><i class="fas fa-map-marker-alt"></i> 123 Example Street, City,
+                            Poland
+                        </p>
+                    </div>
+                </div>
+                <div class="nav__socials">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-linkedin-in"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-twitter"></i>
+                </div>
+            </div>
+            <div class="nav__box">
+                <div class="nav__logo">SoftCode</div>
+                <div class="nav__burger">
+                    <i class="fas fa-bars"></i>
+                </div>
+                <div class="nav__menu">
+                    <div class="nav__logo--menu">SoftCode</div>
+                    <ul class="nav__list">
+                        <li class="nav__element"><a href="#" class="nav__link">Home</a></li>
+                        <li class="nav__element"><a href="#" class="nav__link">Case Studies</a></li>
+                        <li class="nav__element"><a href="#" class="nav__link">How it works</a></li>
+                        <li class="nav__element"><a href="#" class="nav__link">Consultation</a></li>
+                        <li class="nav__element"><a href="#" class="nav__link">Testimonials</a></li>
+                        <li class="nav__element"><a href="#" class="nav__link">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="nav__phone"><i class="fas fa-mobile-alt"></i> 123 456 789</div>
+            </div>
         </div>
     </nav>
+    <header class="header">
+        <div class="header__box">
+            <h2 class="header__h2">Innovations</h2>
+            <p class="header__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi modi vel ducimus
+                delectus sed corporis!
+            </p>
+            <button class="header__btn">Read More</button>
+        </div>
+    </header>
     <script src="./js/nav.js"></script>
 </body>
 
