add header with responsivness and add slider for header

--- a/index.html
+++ b/index.html
@@ -56,15 +56,20 @@
         </div>
     </nav>
     <header class="header">
+        <img src="./src/innovations.jpg" alt="" class="header__img-bg">
+        <img src="./src/consultations.jpg" alt="" class="header__img-bg">
+        <img src="./src/proccessing.jpg" alt="" class="header__img-bg">
         <div class="header__box">
-            <h2 class="header__h2">Innovations</h2>
+            <h2 class="header__h2">Proccessing</h2>
             <p class="header__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi modi vel ducimus
                 delectus sed corporis!
             </p>
             <button class="header__btn">Read More</button>
         </div>
     </header>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
     <script src="./js/nav.js"></script>
+    <script src="./js/header.js"></script>
 </body>
 
 </html>
