--- a/index.html
+++ b/index.html
@@ -67,6 +67,51 @@
             <button class="header__btn">Read More</button>
         </div>
     </header>
+    <section class="stats">
+        <div class="stats__box">
+            <div class="stats__icon"><i class="fas fa-bullseye"></i></div>
+            <div class="stats__content">
+                <p class="stats__number">500<span class="stats__span">+</span> </p>
+                <p class="stats__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+        <div class="stats__box">
+            <div class="stats__icon"><i class="fas fa-pen"></i></div>
+            <div class="stats__content">
+                <p class="stats__number">30<span class="stats__span">%</span> </p>
+                <p class="stats__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+        <div class="stats__box">
+            <div class="stats__icon"><i class="fas fa-tools"></i></div>
+            <div class="stats__content">
+                <p class="stats__number">1200<span class="stats__span">+</span> </p>
+                <p class="stats__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+        <div class="stats__box">
+            <div class="stats__icon"><i class="fas fa-cube"></i></div>
+            <div class="stats__content">
+                <p class="stats__number">563<span class="stats__span">+</span> </p>
+                <p class="stats__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+    </section>
+    <section class="statement">
+        <div class="statement__icon"><i class="far fa-lightbulb"></i></div>
+        <div class="statement__box-left">
+            <h2 class="statement__h2">Businesses today cross borders and regions, so you need a service provider that
+                goes where you.</h2>
+            <p class="statement__name">Jhon Smith</p>
+        </div>
+        <div class="statement__box-right">
+            <p class="statement__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur explicabo quae quidem delectus ullam,
+                accusantium dolorum rerum ipsam tempora quia fuga cum praesentium blanditiis aperiam aliquid nemo minima
+                deleniti placeat!
+            </p>
+        </div>
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
     <script src="./js/nav.js"></script>
     <script src="./js/header.js"></script>
