add statement section with responsivness

--- a/index.html
+++ b/index.html
@@ -106,9 +106,8 @@
         </div>
         <div class="statement__box-right">
             <p class="statement__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur explicabo quae quidem delectus ullam,
-                accusantium dolorum rerum ipsam tempora quia fuga cum praesentium blanditiis aperiam aliquid nemo minima
-                deleniti placeat!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio perferendis necessitatibus itaque ipsa in
+                illo dolorem excepturi laborum. Quidem, dolorem.
             </p>
         </div>
     </section>
