add what-we-do sections with responsivness

--- a/index.html
+++ b/index.html
@@ -111,6 +111,44 @@
             </p>
         </div>
     </section>
+    <section class="what-we-do">
+        <div class="what-we-do__icon"><i class="fas fa-briefcase"></i></div>
+        <h2 class="what-we-do__title">What We Do</h2>
+        <p class="what-we-do__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus magni quidem autem
+            labore sint quasi.</p>
+        <div class="what-we-do__box-wraper">
+            <div class="what-we-do__box">
+                <div class="what-we-do__img">
+                    <div class="what-we-do__logo"><i class="fas fa-cloud"></i></div>
+                </div>
+                <h4 class="what-we-do__sub-title">Cloud Services</h4>
+                <p class="what-we-do__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+                    aperiam.
+                </p>
+                <button class="what-we-do__btn">Read More</button>
+            </div>
+            <div class="what-we-do__box">
+                <div class="what-we-do__img">
+                    <div class="what-we-do__logo"><i class="fas fa-stethoscope"></i></div>
+                </div>
+                <h4 class="what-we-do__sub-title">Health Industry</h4>
+                <p class="what-we-do__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+                    aperiam.
+                </p>
+                <button class="what-we-do__btn">Read More</button>
+            </div>
+            <div class="what-we-do__box">
+                <div class="what-we-do__img">
+                    <div class="what-we-do__logo"><i class="fas fa-lock"></i></div>
+                </div>
+                <h4 class="what-we-do__sub-title">Cyber Seciurity</h4>
+                <p class="what-we-do__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+                    aperiam.
+                </p>
+                <button class="what-we-do__btn">Read More</button>
+            </div>
+        </div>
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
     <script src="./js/nav.js"></script>
     <script src="./js/header.js"></script>
