ad how-it-works section with responsivness

--- a/index.html
+++ b/index.html
@@ -149,6 +149,43 @@
             </div>
         </div>
     </section>
+    <section class="how-it-works">
+        <div class="how-it-works__box-wrapper">
+            <div class="how-it-works__box">
+                <div class="how-it-works__icon"><i class="fas fa-pen-nib"></i></div>
+                <h4 class="how-it-works__title">Generate Ideas</h4>
+                <p class="how-it-works__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum
+                    aperiam
+                    vitae,
+                    quibusdam laborum eius ducimus?</p>
+            </div>
+            <div class="how-it-works__box">
+                <div class="how-it-works__icon"><i class="fas fa-search"></i></div>
+                <h4 class="how-it-works__title">Collect Data</h4>
+                <p class="how-it-works__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum
+                    aperiam
+                    vitae,
+                    quibusdam laborum eius ducimus?</p>
+            </div>
+            <div class="how-it-works__box">
+                <div class="how-it-works__icon"><i class="far fa-images"></i></div>
+                <h4 class="how-it-works__title">Create Design</h4>
+                <p class="how-it-works__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum
+                    aperiam
+                    vitae,
+                    quibusdam laborum eius ducimus?</p>
+            </div>
+            <div class="how-it-works__box">
+                <div class="how-it-works__icon"><i class="far fa-smile"></i></div>
+                <h4 class="how-it-works__title">Lunch Project</h4>
+                <p class="how-it-works__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum
+                    aperiam
+                    vitae,
+                    quibusdam laborum eius ducimus?</p>
+            </div>
+        </div>
+        <button class="how-it-works__btn">About Our Process</button>
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
     <script src="./js/nav.js"></script>
     <script src="./js/header.js"></script>
